# smartcar

./: .gitignore  COMMANDS.md  HANDOFF.md  README.md  explore.repos
src/car_base/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/car_base/car_base/: protocol.py  serial_check.py
src/car_base/include/car_base/: protocol.hpp  serial_port.hpp
src/car_base/scripts/: keyboard_teleop.py  odom_monitor.py  serial_check.py  test_protocol.py
src/car_base/src/: car_base_node.cpp
src/car_base/test/: test_protocol.cpp  test_protocol.py
src/car_bringup/: CMakeLists.txt  package.xml
src/car_bringup/config/: 99-smartcar.rules  car_base.yaml
src/car_bringup/launch/: bringup.launch.py
src/car_camera/: CMakeLists.txt  PARKING.md  README.md  package.xml
src/car_camera/AprilTag_tag36h11_ID0/: README.md  README_AprilTag.md  gen_8tags.py  gen_a3_pdf.py  gen_apriltag.py  gen_print.py
src/car_camera/config/: board_parking.yaml  c270_calibration.yaml  camera.yaml  webcam_calibration.yaml
src/car_camera/launch/: board_parking.launch.py  camera.launch.py  camera_apriltag.launch.py
src/car_camera/scripts/: board_parker.py  tag_follower.py
src/car_camera/src/: apriltag_detector_node.cpp  car_camera_node.cpp
src/car_camera/test/: test_board_parker_gate.py  test_tag_board_assets.py
src/car_explore/: CMakeLists.txt  GOAL_DIRECTED_TEST.md  MRTSP_TEST.md  ROADMAP_TEST.md  package.xml
src/car_explore/config/: explore.yaml  goal_directed_explorer.yaml  mrtsp_explore.yaml  roadmap_explorer.yaml
src/car_explore/launch/: autonomous_exploration.launch.py  autonomous_goal_navigation.launch.py  explore.launch.py  goal_directed_navigation.launch.py  mrtsp_explore.launch.py  roadmap_exploration.launch.py
src/car_explore/scripts/: goal_directed_explorer.py  roadmap_explore_mission.py  roadmap_handoff.py
src/car_explore/test/: test_roadmap_handoff.py
src/car_navigation/: CMakeLists.txt  package.xml
src/car_navigation/behavior_trees/: navigate_through_poses_no_backup.xml  navigate_through_poses_safe_recovery.xml  navigate_to_pose_no_backup.xml  navigate_to_pose_position_only.xml  navigate_to_pose_safe_recovery.xml
src/car_navigation/config/: collision_monitor.yaml  nav2_params.yaml  twist_mux.yaml
src/car_navigation/launch/: navigation.launch.py  safety.launch.py  slam_navigation.launch.py
src/car_navigation/maps/: README.md
src/car_slam/: CMakeLists.txt  package.xml
src/car_slam/config/: slam_toolbox.yaml
src/car_slam/launch/: slam.launch.py
src/roadmap-explorer/roadmap_explorer/: CHANGELOG.rst  CMakeLists.txt  core_plugins_description.xml  frontier_information_gain_plugins.xml  frontier_planner_plugins.xml  frontier_search_plugins.xml  package.xml
src/roadmap-explorer/roadmap_explorer/comparision_scripts/: CMakeLists.txt  exploration_path_followed_tf.cpp  explored_map_counter.cpp
src/roadmap-explorer/roadmap_explorer/include/roadmap_explorer/: CostAssigner.hpp  ExplorationBT.hpp  ExplorationServer.hpp  Frontier.hpp  FullPathOptimizer.hpp  Helpers.hpp  Nav2Interface.hpp  Parameters.hpp  SensorSimulator.hpp
src/roadmap-explorer/roadmap_explorer/include/roadmap_explorer/bt_plugins/: BTContext.hpp  BaseBTPlugin.hpp  BlacklistGoalPlugin.hpp  CleanupRoadmapPlugin.hpp  LogIterationPlugin.hpp  OptimizeFullPathPlugin.hpp  ProcessFrontierCostsPlugin.hpp  SearchForFrontiersPlugin.hpp  SendNav2GoalPlugin.hpp  UpdateBoundaryPlugin.hpp  UpdateRoadmapPlugin.hpp
src/roadmap-explorer/roadmap_explorer/include/roadmap_explorer/frontier_search/: BaseFrontierSearch.hpp  PluginBFSearch.hpp
src/roadmap-explorer/roadmap_explorer/include/roadmap_explorer/planners/: Astar.hpp  (+8 more)
src/roadmap-explorer/roadmap_explorer/launch/: exploration_data.launch.py  exploration_server.launch.py  tb3_exploration.launch.py
src/roadmap-explorer/roadmap_explorer/params/: exploration_params.yaml  tb3_exploration_params.yaml
src/roadmap-explorer/roadmap_explorer/rviz/: exploration.rviz
src/roadmap-explorer/roadmap_explorer/src/: CostAssigner.cpp  ExplorationBT.cpp  ExplorationServer.cpp  Frontier.cpp  FullPathOptimizer.cpp  Helpers.cpp  Nav2Interface.cpp  Parameters.cpp  SensorSimulator.cpp  main.cpp
src/roadmap-explorer/roadmap_explorer/src/bt_plugins/: BlacklistGoalPlugin.cpp  CleanupRoadmapPlugin.cpp  LogIterationPlugin.cpp  OptimizeFullPathPlugin.cpp  ProcessFrontierCostsPlugin.cpp  SearchForFrontiersPlugin.cpp  SendNav2GoalPlugin.cpp  UpdateBoundaryPlugin.cpp  UpdateRoadmapPlugin.cpp
src/roadmap-explorer/roadmap_explorer/src/frontier_search/: PluginBFSearch.cpp
src/roadmap-explorer/roadmap_explorer/src/information_gain/: CountBasedGain.cpp
src/roadmap-explorer/roadmap_explorer/src/planners/: Astar.cpp  EuclideanPlugin.cpp  FrontierRoadmap.cpp  FrontierRoadmapPlugin.cpp  NavFn.cpp  NavFnPlugin.cpp  RandomDistancePlugin.cpp  ThetaStar.cpp
src/roadmap-explorer/roadmap_explorer/src/util/: EventLogger.cpp  RosVisualizer.cpp
src/roadmap-explorer/roadmap_explorer/tests/: test_astar.cpp  test_frontier.cpp
src/roadmap-explorer/roadmap_explorer/tests/bt_plugins/: CMakeLists.txt  test_base_bt_plugin.cpp  test_bt_plugin_integration.cpp  test_log_iteration_plugin.cpp
src/roadmap-explorer/roadmap_explorer/tests/frontier_search/: CMakeLists.txt  test_base_frontier_search.cpp  test_frontier_bf_search.cpp
src/roadmap-explorer/roadmap_explorer/tests/information_gain/: CMakeLists.txt  test_base_information_gain.cpp  test_count_based_gain.cpp
src/roadmap-explorer/roadmap_explorer/tests/other_tests/: CMakeLists.txt  test_cost_assigner.cpp
src/roadmap-explorer/roadmap_explorer/tests/utils/: CMakeLists.txt  test_event_logger.cpp  test_general_utils.cpp  test_geometry_utils.cpp  test_helpers.cpp  test_ros_visualizer.cpp
src/roadmap-explorer/roadmap_explorer/xml/: exploration.xml  explore_to_pose.xml
src/roadmap-explorer/roadmap_explorer_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/roadmap-explorer/roadmap_explorer_msgs/action/: Explore.action
src/roadmap-explorer/roadmap_explorer_msgs/msg/: MapData.msg
src/roadmap-explorer/roadmap_explorer_msgs/srv/: SaveMapAndRoadmap.srv
(+13 files in other folders)
