<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>car_camera</name>
  <version>0.1.0</version>
  <description>USB 摄像头采集节点:读取罗技 C270,发布 sensor_msgs/Image + CameraInfo</description>
  <maintainer email="lushici@ldrobot.com">lsc</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <!-- OpenCV:由系统包 libopencv-dev 提供,cv_bridge 已传递依赖,显式声明便于 rosdep -->
  <depend>libopencv-dev</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
