<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>car_explore</name>
  <version>0.1.0</version>
  <description>智能车 explore_lite 自主前沿探索配置与启动编排</description>
  <maintainer email="lushici@ldrobot.com">lsc</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>car_navigation</exec_depend>
  <exec_depend>car_slam</exec_depend>
  <exec_depend>explore_lite</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
