<?xml version="1.0"?>
<package format="3">
  <name>roadmap_explorer</name>
  <version>1.0.0</version>
  <description>The roadmap explorer package</description>

  <maintainer email="rssuchetan@gmail.com">Suchetan Saravanan</maintainer>
  <license>Apache License 2.0</license>

  <depend>rosidl_default_generators</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_cmake</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>geometry_msgs</depend>
  <depend>action_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>roadmap_explorer_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>pluginlib</depend>
  <depend>visualization_msgs</depend>
  <depend>nav2_util</depend>
  <depend>nav2_behavior_tree</depend>
  <depend>nav2_navfn_planner</depend>
  <depend>nav2_theta_star_planner</depend>
  <depend>nav2_map_server</depend>
  <depend>boost</depend>
  <depend>nlohmann-json-dev</depend>

  <depend condition="$ROS_DISTRO == 'humble'">behaviortree_cpp_v3</depend>
  <depend condition="$ROS_DISTRO == 'jazzy'">behaviortree_cpp</depend>
  <depend condition="$ROS_DISTRO == 'kilted'">behaviortree_cpp</depend>

  <build_depend>ros_environment</build_depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <nav2_core plugin="${prefix}/global_planner_plugin.xml"/>
    <roadmap_explorer plugin="${prefix}/frontier_search_plugins.xml"/>
  </export>
</package>