<?xml version="1.0"?>
<package format="3">
  <name>roadmap_explorer_msgs</name>
  <version>1.0.0</version>
  <description>A package that has the ROS 2 interfaces for running roadmap-explorer</description>

  <maintainer email="rssuchetan@gmail.com">Suchetan Saravanan</maintainer>
  <license>Apache License 2.0</license>

  <depend>rosidl_default_generators</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>

  <build_depend>ros_environment</build_depend>


  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>